Edited wiki page CompileInstructions through web user interface.

--- a/wiki/CompileInstructions.wiki
+++ b/wiki/CompileInstructions.wiki
@@ -18,7 +18,7 @@ IL2DCE is an AddIn that integrates into _IL-2 Sturmovik: Cliffs of Dover_. It ha
   * gamePlay.dll
   * gameWorld.dll
 
-They are located at "$home\parts\core". For the default installation this is "C:\Program Files (x86)\Steam\SteamApps\common\il-2 sturmovik cliffs of dover\parts\core". The projects of the IL2DCE solution are configured to use a relative path to these assemblies. Therefore the source has to be placed at a specific location relative to the $home folder. See [HowToCompileFromSource#Checkout Checkout] for more details.
+They are located at "$home\parts\core". For the default installation this is "C:\Program Files (x86)\Steam\SteamApps\common\il-2 sturmovik cliffs of dover\parts\core". The projects of the IL2DCE solution are configured to use a relative path to these assemblies. Therefore the source has to be placed at a specific location relative to the $home folder. See [CompileInstructions#Checkout Checkout] for more details.
 
 
 === SubWCRev.exe ===
