Edited wiki page CompileInstructions through web user interface.

--- a/wiki/CompileInstructions.wiki
+++ b/wiki/CompileInstructions.wiki
@@ -36,11 +36,10 @@ See [CompileInstructions#Version_number Version number] for more details.
 
 === Debug ===
 
+==== Run ====
+
 === Release ===
 
 ==== Version number ====
 
 [http://tortoisesvn.net/docs/release/TortoiseSVN_en/tsvn-subwcrev.html TortoiseSVN documentation]
-
-
-== Run ==
