Edited wiki page Compile_Instructions through web user interface.

--- a/wiki/Compile_Instructions.wiki
+++ b/wiki/Compile_Instructions.wiki
@@ -43,3 +43,5 @@ See [CompileInstructions#Version_number Version number] for more details.
 ==== Version number ====
 
 [http://tortoisesvn.net/docs/release/TortoiseSVN_en/tsvn-subwcrev.html TortoiseSVN documentation]
+
+==== Create setup ===
