--- a/wiki/Compile_Instructions.wiki
+++ b/wiki/Compile_Instructions.wiki
@@ -50,7 +50,7 @@ The major number is increased when fundamental changes were made compared to the
 
 With exception of the revision number they have to be increased by the developer. The revision number is updated by [#SubWCRev.exe SubWCRev.exe].
 
-==== Create setup ===
+==== Installer ===
 
 A script file for the [http://nsis.sourceforge.net/ Nullsoft Scriptable Install System (NSIS)] is provided to create a installer and uninstaller. The script is copied to the $release folder. There it has to be executed by the developer. The installer file has to naming convention:
 
