--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -3,7 +3,7 @@
 
 = Introduction =
 
-
+This document contains instructions on how to install a binary release IL2DCE.
 
 At certain development stages a binary release is provided at [http://code.google.com/p/il2dce/downloads/list http://code.google.com/p/il2dce/downloads/list]. 
 
