Edited wiki page Installation_Instructions through web user interface.

--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -3,7 +3,7 @@
 
 = Introduction =
 
-This document contains instructions on how to install a binary release IL2DCE.
+This document contains instructions on how to install a binary release IL2DCE. Developers should follow the [Compile_Instructions Compile Instructions].
 
 
 = Details =
