--- a/wiki/Compile_Instructions.wiki
+++ b/wiki/Compile_Instructions.wiki
@@ -1,5 +1,5 @@
 #summary How to compile IL2DCE from source.
-#labels Phase-Implementation,Phase-Deploy
+#labels Phase-Implementation,Phase-Deploy,Featured
 
 = Introduction =
 
