--- a/wiki/Software_Requirements_Specification.wiki
+++ b/wiki/Software_Requirements_Specification.wiki
@@ -3,24 +3,23 @@
 
 = Introduction =
 
-
 = Details =
 
 == Functional Requirments ==
 
-=== Air war ===
+=== Air War ===
 The air war is simulated at the tactical level. The units involved are of squadron and wing size.
 
-=== Ground war ===
+=== Ground War ===
 The ground war is simulated at the operational level. The units involved are of battalion and division size.
 
-=== Squadron managment ===
+=== Squadron Managment ===
 
 ==== Medals and Decoration ===
 
 ==== Rank ====
 
-==== Pilot experience level ====
+==== Pilot Experience Level ====
 The experience of a pilot is reflected by his position within the squadron. 
    * Section leader
    * Flight leader
@@ -37,3 +36,5 @@ The player can become the Commanding Officer of a squadron and can then influenc
 ==== Single-player ====
 
 ==== Multiplayer ====
+
+=== Campaign Creation ===
