Edited wiki page Campaign_Creation_Instructions through web user interface.

--- a/wiki/Campaign_Creation_Instructions.wiki
+++ b/wiki/Campaign_Creation_Instructions.wiki
@@ -1,5 +1,5 @@
 #summary How to create a campaign for IL2DCE.
-#labels Phase-Deploy,Phase-Support
+#labels Phase-Deploy,Phase-Support,Draft
 
 = Introduction =
 
